logics modified for retry a deploy later

--- a/time2padel-api/.env
+++ b/time2padel-api/.env
@@ -1,5 +1,6 @@
 PORT = 8000
 SECRET = La producsion del platano canario
-DB_URL_TEST = mongodb://localhost:27017/time2padel-test
+_DB_URL_TEST = mongodb://localhost:27017/time2padel-test
+_DB_URL = mongodb://heroku_0nhkp9nl:AD16ca03ca@ds125684.mlab.com:25684/heroku_0nhkp9nl
 DB_URL = mongodb://localhost:27017/time2padel
-#DB_URL = mongodb://localhost:27017/time2padel-test
+_DB_URL = mongodb://localhost:27017/time2padel-test
