--- a/time2padel-app/.env
+++ b/time2padel-app/.env
@@ -1,4 +1,4 @@
-_REACT_APP_API_URL = http://192.168.1.13:8000
-REACT_APP_API_URL = https://time2padel.herokuapp.com
+REACT_APP_API_URL = http://192.168.1.36:8000
+_REACT_APP_API_URL = https://time2padel.herokuapp.com
 REACT_APP_TEST_DB_URL = mongodb://localhost:27017/time2padel-test
 REACT_APP_TEST_SECRET = La producsion del platano canario
